<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="item"
            type="com.celaloglu.zafer.nasa.api.response.Photo" />

    </data>

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/cardview_dark_background">

        <android.support.v7.widget.CardView
            android:id="@+id/camera"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            app:cardCornerRadius="8dp"
            app:cardElevation="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/camera_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:text="@string/camera_title"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/name_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/camera_name"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="@+id/camera_title"
                    app:layout_constraintTop_toBottomOf="@+id/camera_title" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:text="@{item.camera.name}"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                    android:textSize="16sp"
                    app:layout_constraintBottom_toBottomOf="@+id/name_title"
                    app:layout_constraintStart_toEndOf="@+id/name_title"
                    app:layout_constraintTop_toTopOf="@+id/name_title"
                    tools:text="FHAZ" />

                <TextView
                    android:id="@+id/full_name_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="16dp"
                    android:text="@string/camera_full_name"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="@+id/name_title"
                    app:layout_constraintTop_toBottomOf="@+id/name_title" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:text="@{item.camera.fullName}"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                    android:textSize="16sp"
                    app:layout_constraintBottom_toBottomOf="@+id/full_name_title"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/full_name_title"
                    app:layout_constraintTop_toTopOf="@+id/full_name_title"
                    tools:text="Front Hazard Avoidance Camera" />

            </android.support.constraint.ConstraintLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/rover"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            app:cardCornerRadius="8dp"
            app:cardElevation="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/camera">

            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/rover_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:text="@string/rover"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/rover_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/rover_name"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="@+id/rover_title"
                    app:layout_constraintTop_toBottomOf="@+id/rover_title" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:text="@{item.rover.name}"
                    android:textSize="16sp"
                    app:layout_constraintBottom_toBottomOf="@+id/rover_name"
                    app:layout_constraintStart_toEndOf="@+id/rover_name"
                    app:layout_constraintTop_toTopOf="@+id/rover_name"
                    tools:text="Curiosity" />

                <TextView
                    android:id="@+id/landing_day"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/landing_day"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="@+id/rover_name"
                    app:layout_constraintTop_toBottomOf="@+id/rover_name" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:text="@{item.rover.landingDate}"
                    android:textSize="16sp"
                    app:layout_constraintBottom_toBottomOf="@+id/landing_day"
                    app:layout_constraintStart_toEndOf="@+id/landing_day"
                    app:layout_constraintTop_toTopOf="@+id/landing_day"
                    tools:text="2012-08-06" />

                <TextView
                    android:id="@+id/launch_day"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/launch_day"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="@+id/landing_day"
                    app:layout_constraintTop_toBottomOf="@+id/landing_day" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:text="@{item.rover.launchDate}"
                    android:textSize="16sp"
                    app:layout_constraintBottom_toBottomOf="@+id/launch_day"
                    app:layout_constraintStart_toEndOf="@+id/launch_day"
                    app:layout_constraintTop_toTopOf="@+id/launch_day"
                    tools:text="2011-11-26" />

                <TextView
                    android:id="@+id/status"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/status"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="@+id/launch_day"
                    app:layout_constraintTop_toBottomOf="@+id/launch_day" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:text="@{item.rover.status}"
                    android:textSize="16sp"
                    app:layout_constraintBottom_toBottomOf="@+id/status"
                    app:layout_constraintStart_toEndOf="@+id/status"
                    app:layout_constraintTop_toTopOf="@+id/status"
                    tools:text="Active" />

                <TextView
                    android:id="@+id/total_photos"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="16dp"
                    android:text="@string/total_photos"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="@+id/status"
                    app:layout_constraintTop_toBottomOf="@+id/status" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:text="@{String.valueOf(item.rover.totalPhotos)}"
                    android:textSize="16sp"
                    app:layout_constraintBottom_toBottomOf="@+id/total_photos"
                    app:layout_constraintStart_toEndOf="@+id/total_photos"
                    app:layout_constraintTop_toTopOf="@+id/total_photos"
                    tools:text="344298" />

            </android.support.constraint.ConstraintLayout>

        </android.support.v7.widget.CardView>

    </android.support.constraint.ConstraintLayout>

</layout>